[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-utils"
version = "0.0.6"
authors = [
  { name="Tristan Engst", email="tristanengst@gmail.com" },
]
description = "Useful utility functions for deep learning research"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[options]
install_requires = [
    "torch>=1.10",
    "torchvision",
    "matplotlib",
    "gdown",
    "lmdb",
]

[project.urls]
"Homepage" = "https://github.com/tristanengst/apex-utils"
